# sslRag

./: .env.example  .gitignore  README.md  pyproject.toml  test_multiturn.py  test_multiturn_eval.py
configs/: rag_v1.json  rag_v2.json
data/: .env.example  requirements.txt
data/eval_70/: README.md  stakeholder_eval_70.json  stakeholder_eval_70_summary.json
data/eval_phase2/: stakeholder_eval_phase2.json
report/: RAG_V1_FULL_EXPERIMENT_REPORT.md  RAG_V2_FULL_EXPERIMENT_REPORT.md  RAG_V2_FULL_EXPERIMENT_REPORT_EN.md  experiment_report.md
report/raw_to_embedding/: experiment_report.md
results/final/: RAG_V1_EVAL_SUMMARY.md  baseline_v4_metrics.json  baseline_vs_rag_v1_metrics.json  logs.txt  outputs.json  rag_v1_error_analysis.json  rag_v1_eval_results.json  rag_v1_metrics.json
results/v2/: MULTITURN_EVAL_REPORT.md  RAG_V2_EVAL_SUMMARY.md  multiturn_eval_metrics.json  multiturn_eval_results.json  rag_v1_phase2_eval_results.json  rag_v1_phase2_metrics.json  rag_v2_error_analysis.json  rag_v2_eval_results.json  rag_v2_metrics.json  v1_vs_v2_metrics.json
scripts/: eval_v1_phase2.py  generate_full_experiment_report.py  report_v2_i18n.json
src/rag_v1/: __init__.py  demo.py  pipeline.py
src/rag_v2/: __init__.py  app.py  consistency.py  demo.py  intent_classifier.py  multiturn.py  pipeline.py  query_transform.py  session.py
src/raw_to_embedding/: .gitignore  README.md  __init__.py  chunker.py  config.py  embedder.py  helpers.py  main.py  models.py  parser.py  pipeline.py  prompts.py  requirements-embedding.txt  requirements-scholarworks.txt  requirements.txt  (+2 more)
(+114 files in other folders)
